--- a/src/components/TextGenerator.css
+++ b/src/components/TextGenerator.css
@@ -15,15 +15,15 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background: #f5f5f5;
     z-index: 1;
 }
 
 .text-generator-main-canvas {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     display: block;
     background: #f5f5f5;
 }
